@@ -2,7 +2,7 @@ dnl	This file is an input file used by the GNU "autoconf" program to
 dnl	generate the file "configure", which is run to configure the
 dnl	Makefile in this directory.
 AC_INIT(man2tcl.c)
-AC_PREREQ(2.57)
+AC_PREREQ(2.59)
 # RCS: @(#) $Id$
 
 # Recover information that Tcl computed with its configure script.
@@ -12,7 +12,7 @@ AC_PREREQ(2.57)
 #       not, assume that its top-level directory is a sibling of ours.
 #--------------------------------------------------------------------
 
-DEF_VER=8.5
+DEF_VER=8.6
 
 AC_ARG_WITH(tcl, [  --with-tcl=DIR          use Tcl $DEF_VER binaries from DIR], TCL_BIN_DIR=$withval, TCL_BIN_DIR=`cd ../../tcl$DEF_VER$TCL_PATCH_LEVEL/unix; pwd`)
 if test ! -d $TCL_BIN_DIR; then
